add_subdirectory(DataRefactoring)
add_subdirectory(CompressionLowLevel)
add_subdirectory(CompressionHighLevel)
add_subdirectory(Config)
add_subdirectory(Hierarchy)
add_subdirectory(Lossless)
add_subdirectory(Quantization)
add_subdirectory(RuntimeX)

set(MGARD_X_HEADER ${MGARD_X_HEADER} PARENT_SCOPE)

