add_subdirectory (DataRefactoring)
add_subdirectory (HighLevelAPI)
add_subdirectory (RuntimeX)
add_subdirectory (CompressionWorkflow)
add_subdirectory (Utilities)
set(MGARD_X_SERIAL_SRC ${MGARD_X_SERIAL_SRC} PARENT_SCOPE)
set(MGARD_X_CUDA_SRC ${MGARD_X_CUDA_SRC} PARENT_SCOPE)
set(MGARD_X_HIP_SRC ${MGARD_X_HIP_SRC} PARENT_SCOPE)
set(MGARD_X_SYCL_SRC ${MGARD_X_SYCL_SRC} PARENT_SCOPE)
set(MGARD_X_SRC ${MGARD_X_SRC} PARENT_SCOPE)
