add_subdirectory (Config)
add_subdirectory (Hierarchy)
add_subdirectory (DataRefactoring)
add_subdirectory (CompressionLowLevel)
add_subdirectory (ExternalCompressionLowLevel)
add_subdirectory (CompressionHighLevel)
if (MGARD_ENABLE_MDR)
  add_subdirectory (MDRHighLevel)
endif()
add_subdirectory (RuntimeX)
set(MGARD_X_SERIAL_SRC ${MGARD_X_SERIAL_SRC} PARENT_SCOPE)
set(MGARD_X_OPENMP_SRC ${MGARD_X_OPENMP_SRC} PARENT_SCOPE)
set(MGARD_X_CUDA_SRC ${MGARD_X_CUDA_SRC} PARENT_SCOPE)
set(MGARD_X_HIP_SRC ${MGARD_X_HIP_SRC} PARENT_SCOPE)
set(MGARD_X_SYCL_SRC ${MGARD_X_SYCL_SRC} PARENT_SCOPE)
set(MGARD_X_SRC ${MGARD_X_SRC} PARENT_SCOPE)
