cmake_minimum_required(VERSION 3.19)

project(mgard_cuda_example CXX)
find_package(mgard)

add_executable(SimpleExample SimpleExample.cpp)
add_executable(TestDoubleRelativeError TestDoubleRelativeError.cpp)
add_executable(TestFloatRelativeError TestFloatRelativeError.cpp)
add_executable(TestDoubleAbsoluteError TestDoubleAbsoluteError.cpp)
add_executable(TestFloatAbsoluteError TestFloatAbsoluteError.cpp)

target_link_libraries(SimpleExample mgard::mgard)
target_link_libraries(TestDoubleRelativeError mgard::mgard)
target_link_libraries(TestFloatRelativeError mgard::mgard)
target_link_libraries(TestDoubleAbsoluteError mgard::mgard)
target_link_libraries(TestFloatAbsoluteError mgard::mgard)